{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 91,
  "lineage": "a436a1b9-6481-68a4-d009-3eae5db9af01",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_service",
      "name": "argocd_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd-server",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "argocd",
                  "meta.helm.sh/release-namespace": "argocd"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "server",
                  "app.kubernetes.io/instance": "argocd",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "argocd-server",
                  "app.kubernetes.io/part-of": "argocd",
                  "app.kubernetes.io/version": "v2.11.2",
                  "helm.sh/chart": "argo-cd-7.1.0"
                },
                "name": "argocd-server",
                "namespace": "argocd",
                "resource_version": "727249",
                "uid": "fb521078-f76f-49b1-88d9-6b7b6b763389"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.18.33",
                "cluster_ips": [
                  "10.43.18.33"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  },
                  {
                    "name": "https",
                    "node_port": 0,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/instance": "argocd",
                  "app.kubernetes.io/name": "argocd-server"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd/argocd",
            "metadata": [
              {
                "annotations": {
                  "external-dns.alpha.kubernetes.io/hostname": "argocd.soumith.undernet.cs.odu.edu",
                  "traefik.ingress.kubernetes.io/router.entrypoints": "web"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "argocd",
                "namespace": "argocd",
                "resource_version": "727446",
                "uid": "3c82dcec-c3e7-4495-ac7c-e2cd3fb05508"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "argocd.soumith.undernet.cs.odu.edu",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "argocd-server",
                                    "port": [
                                      {
                                        "name": "http",
                                        "number": 0
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.18.6.105"
                      },
                      {
                        "hostname": "",
                        "ip": "172.18.6.106"
                      },
                      {
                        "hostname": "",
                        "ip": "172.18.6.107"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.kubernetes_service.argocd_server",
            "helm_release.argocd",
            "kubernetes_namespace.argocd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "uptime_kuma",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "uptime-kuma/uptime-kuma",
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt",
                  "external-dns.alpha.kubernetes.io/hostname": "uptime.soumith.undernet.cs.odu.edu",
                  "traefik.ingress.kubernetes.io/router.entrypoints": "web,websecure",
                  "traefik.ingress.kubernetes.io/router.tls": "false"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "uptime-kuma",
                "namespace": "uptime-kuma",
                "resource_version": "63983",
                "uid": "b83bfe94-f86a-41b8-a967-ea31f094060b"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "traefik",
                "rule": [
                  {
                    "host": "uptime.soumith.undernet.cs.odu.edu",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "uptime-kuma",
                                    "port": [
                                      {
                                        "name": "http",
                                        "number": 0
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "Prefix"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "uptime.soumith.undernet.cs.odu.edu"
                    ],
                    "secret_name": "uptime-kuma-tls"
                  }
                ]
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "172.18.6.105"
                      },
                      {
                        "hostname": "",
                        "ip": "172.18.6.106"
                      },
                      {
                        "hostname": "",
                        "ip": "172.18.6.107"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.uptime_kuma",
            "kubernetes_service.uptime_kuma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "argocd",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "argocd",
            "metadata": [
              {
                "generation": 0,
                "name": "argocd",
                "resource_version": "727167",
                "uid": "ebc55d84-b704-499c-b7cd-851acfb7d6aa"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "uptime_kuma",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "uptime-kuma",
            "metadata": [
              {
                "generation": 0,
                "name": "uptime-kuma",
                "resource_version": "62554",
                "uid": "9a310e38-a865-4680-9e95-6ee5d5b4a4e5"
              }
            ],
            "wait_for_default_service_account": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "uptime_kuma",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "uptime-kuma/uptime-kuma",
            "metadata": [
              {
                "generation": 0,
                "name": "uptime-kuma",
                "namespace": "uptime-kuma",
                "resource_version": "62563",
                "uid": "8441eae6-c3ab-49c1-84a6-0dd60b6e6e0f"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.43.14.6",
                "cluster_ips": [
                  "10.43.14.6"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 0,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "uptime-kuma"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.uptime_kuma"
          ]
        }
      ]
    }
  ]
}